--- a/src/components/CSS/Quiz.module.css
+++ b/src/components/CSS/Quiz.module.css
@@ -1,7 +1,7 @@
 .body {
     background: rgb(199,226,254);
     background: linear-gradient(180deg, rgba(199,226,254,1) 50%, rgba(52,89,222,1) 100%);
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     padding: 32px 6%;
     gap: 5%;
@@ -15,6 +15,7 @@
  align-items: center;
  justify-content: center;
  flex-direction: column;
+ gap: 32px;
 }
 .pergunta{
     background-color: aliceblue;
@@ -24,34 +25,50 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 70vh;
+    width: 70vw;
 }
 .textoPergunta{
     color: #182b70;
-    font-size: x-large;
+    font-size: xx-large;
 }
 .textoAuxilio{
     color: #182b7057;
-    font-size: medium;
+    font-size: large;
+
 }
 
 .videos{
-    padding: 10px;
+    height: 50%;
 }
 
+.divRespostas {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+  
+  .divRespostas h3 {
+    width: 50%;
+    text-align: center;
+  }
 
-
-
-
-.btns{
-    background-color: #182b70;
-    color: #deeeff;
+.btn{
+    background-color: #ffffff;
+    color: #182b70;
     padding: 15px 40px;
     border-radius: 20px;
     font-weight: bold;
     border: none;
-    margin-top: 22vh;
     font-size: 3vw;
 }
+
+
+
+
+
+
 .card{
     background-color: #deeeff;
     display: flex;
